--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "cors": "^2.8.5",
+    "emailjs-com": "^3.2.0",
     "express": "^4.17.2",
     "nodemailer": "^6.7.2",
     "react": "^17.0.2",
