--- a/package.json
+++ b/package.json
@@ -13,27 +13,29 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "assert": "^2.0.0",
     "cors": "^2.8.5",
     "emailjs-com": "^3.2.0",
     "express": "^4.17.2",
     "grecaptcha": "^1.0.3",
+    "https-browserify": "^1.0.0",
     "nodemailer": "^6.7.2",
+    "os": "^0.1.2",
+    "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "react": "^17.0.2",
+    "react-app-rewired": "^2.1.9",
     "react-dom": "^17.0.2",
     "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.25.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "styled-components": "^5.3.3",
-    "web-vitals": "^2.1.4",
-    "assert": "^2.0.0",
-    "https-browserify": "^1.0.0",
-    "os": "^0.1.2",
-    "os-browserify": "^0.3.0",
-    "react-app-rewired": "^2.1.9",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1",
     "stream-browserify": "^3.0.0",
-    "stream-http": "^3.2.0"
+    "stream-http": "^3.2.0",
+    "styled-components": "^5.3.3",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
